# Cargo.toml
# Copyright 2017 Alexander Altman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Alexander Ronald Altman <alexanderaltman@me.com>"]
name = "elementscript"
version = "0.1.1"

[[bin]]
name = "es-mu"
path = "src/es-mu_main.rs"

[dependencies]
error-chain = "^0.10.0"
unicode-segmentation = "^1.1.0"
unicode-normalization = "^0.1.4"
itertools = "^0.5.10"
liner = "^0.1.4"

[lib]
name = "elementscript"
path = "src/lib.rs"
